force-app/main/default/objects/DocuSignAuthorization__c/DocuSignAuthorization__c.object-meta.xml
<CustomObject>
    <label>DocuSignAuthorization</label>
    <nameField>
        <label>DocuSignAuthorization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSignAuthorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>