force-app/main/default/objects/DocuSignAuthorization__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client_Id</label>
    <type>TextArea</type>
</CustomField>