force-app/main/default/objects/DocuSignAuthorization__c/fields/Hash_Value__c.field-meta.xml
<CustomField>
    <fullName>Hash_Value__c</fullName>
    <label>Hash_Value</label>
    <type>TextArea</type>
</CustomField>