force-app/main/default/objects/DocuSignAuthorization__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <label>Template_Id</label>
    <type>TextArea</type>
</CustomField>